--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/MainWindow.xaml
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/MainWindow.xaml
@@ -7,6 +7,40 @@
         mc:Ignorable="d"
         Title="存钱取钱" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="81*" />
+            <RowDefinition Height="48*" />
+            <RowDefinition Height="290*" />
+        </Grid.RowDefinitions>
+        <Button Content="存 钱" FontSize="20"/>
+        <Button Content="取 钱" Grid.Column="1" FontSize="20"/>
+        <Label Content="啦啦啦啦啦啦啦" Grid.Row="1" Grid.ColumnSpan="2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red"/>
+        <Label Content="账户金额" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Center" Height="48" Width="107" FontSize="24" FontWeight="Bold"/>
+        <DataGrid Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Left">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header = "时间" Width = "100" Binding="{Binding CreateTime}" />
+                <DataGridTextColumn Header = "类型" Width = "100" Binding="{Binding Type}" />
+                <DataGridTextColumn Header = "金额" Width = "100" Binding="{Binding Amount}" />
+                <DataGridTextColumn Header = "变化后余额" Width = "100" Binding="{Binding Balance}" />
+                <DataGridTextColumn Header = "备注" Width = "400" Binding="{Binding Remark}" />
+            </DataGrid.Columns>
+
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+                    <!--<Setter Property="Background" Value="#001f55"></Setter>-->
+                    <!--<Setter Property="Foreground" Value="#17acae"></Setter>-->
+                    <!--<Setter Property="BorderThickness" Value="1" />-->
+                    <!--<Setter Property="BorderBrush" Value="#17acae" />-->
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
+
+        </DataGrid>
+
+
     </Grid>
 </Window>
