--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/WithdrawMoney.xaml
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/WithdrawMoney.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="Project_001_UpdateMoney.SaveMoney"
+﻿<Window x:Class="Project_001_UpdateMoney.WithdrawMoney"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_001_UpdateMoney"
         mc:Ignorable="d"
-        Title="存款窗口" Height="200" Width="200">
+        Title="取款窗口" Height="200" Width="200">
     <Grid>
         <Button Content="确认" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Content="取消" HorizontalAlignment="Left" Margin="107,141,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Label Content="请输入存款数额" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+        <Label Content="请输入取款数额" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,10,0,0"/>
         <TextBox Name="textbox1" HorizontalAlignment="Center" Height="23" Margin="0,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" InputMethod.IsInputMethodEnabled="False"/>
 
     </Grid>
