--- a/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/MainWindow.xaml
+++ b/Examples/Project-001-UpdateMoney/Project-001-UpdateMoney/MainWindow.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
         <Button Content="存 钱" FontSize="20" Click="Button_Click"/>
         <Button Content="取 钱" Grid.Column="1" FontSize="20" Click="Button_Click_1"/>
-        <Label Name="balanceNumber" Content="啦啦啦啦啦啦啦" Grid.Row="1" Grid.ColumnSpan="2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red"/>
+        <Label Name="balanceNumber" Content="0" Grid.Row="1" Grid.ColumnSpan="2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red"/>
         <Label Content="账户金额" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Center" Height="48" Width="107" FontSize="24" FontWeight="Bold"/>
         <DataGrid Name="dataGrid" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" CanUserAddRows="False">
             <DataGrid.Columns>
